lab/apps/guacamole/guacamole-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  namespace: guacamole
spec:
  selector:
    matchLabels:
      run: guacamole
  replicas: 1
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 6
  template:
    metadata:
      labels:
        run: guacamole
    spec:
      containers:
      - name: guacamole
        image: guacamole/guacamole:1.4.0
        resources:
          limits:
            memory: "250Mi"
            cpu: "50m"
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
          - name: guacamole-conf
            mountPath: /etc/guacamole/
        livenessProbe:
          httpGet:
            path: /guacamole/
            port: 8080
          initialDelaySeconds: 120
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
              path: /guacamole/
              port: 8080
          initialDelaySeconds: 120
          timeoutSeconds: 40
      volumes:
        - name: guacamole-conf
          configMap:
            name: guacamole-conf
