lab/apps/guacamole/guacamole-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole-svc
  namespace: guacamole
  labels:
    run: guacamole
spec:
  selector:
    run: guacamole
  ports:
  - port: 8080
    protocol: TCP
