lab/apps/guacamole/guacamole-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: guacamole
  namespace: guacamole
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`guacamole.${SECRET_INT_DOMAIN}`)
      kind: Rule
      services:
        - name: guacamole-svc
          port: 8080
  tls:
    secretName: prod-guacamole-${SECRET_INT_CERT_DOMAIN}
---
    apiVersion: cert-manager.io/v1
    kind: Certificate
    metadata:
      name: guacamole.${SECRET_INT_DOMAIN}
      namespace: guacamole
    spec:
      secretName: prod-guacamole-${SECRET_INT_CERT_DOMAIN}
      issuerRef:
        name: letsencrypt-production
        kind: ClusterIssuer
      commonName: "guacamole.${SECRET_INT_DOMAIN}"
      dnsNames:
      - "guacamole.${SECRET_INT_DOMAIN}"
